@startuml
title Pipeline de Renderizado — Cliente

note as N1
  Diagrama parcial (~20% de los métodos reales).
  SpriteRenderer tiene ~40+ métodos públicos
  (load_sprites, set_map_bounds, move_movable,
  set_skin_config, hit_test_entity, tick_animations,
  etc.). EntitySpriteRegistry tiene ~30+ métodos.
  Ver client/headers para el detalle completo.
end note

class SpriteRenderer {
  - entity_registry_: EntitySpriteRegistry
  - effects_: EffectOverlaySystem
  + add_entity(id, x, y, name, race, class, sprite_id)
  + remove_entity(id)
  + move_entity(id, x, y)
  + advance_entity_src_x(id, step, frame_count)
  + set_entity_src_y(id, body_y, head_y)
  + render(cam)
  + render_overlays(cam)
}

class EntitySpriteRegistry {
  - entities: map<uint16_t, RenderedEntity>
  - skin_config: SkinConfig
  + add_entity(id, x, y, name, race, class, sprite_id)
  + remove_entity(id)
  + move_entity(id, x, y)
  + advance_entity_src_x(id, step, frame_count)
  + set_entity_src_y(id, body_y, head_y)
  + set_local_clan_name(name)
  + set_entity_clan_name(id, name)
  + collect_drawables(cam, out)
  + {static} resolve_entity_skin(skin, cfg, race, class, sprite_id): SpriteConfig
}

class EffectOverlaySystem {
  + load_damage_overlay(cfg)
  + trigger_damage_effect(world_x, world_y)
  + load_spell_sheets(sheets)
  + trigger_spell_effect(effect_type, world_x, world_y)
  + advance()
  + render(cam)
}

class RenderedEntity {
  sprite_id: uint16_t
  frame_w: int
  frame_h: int
  base_src_x: int
  base_src_y: int
  speed: int
  move_counter: int
  last_move_tick: uint32_t
  parts: vector<SpriteRender>
  name_label: optional<EntityNameRender>
  equip: EntityEquipState
  clan_name: string
  username: string
}

class SkinConfig {
  body: map<string, string>
  head: map<string, string>
  npc: map<uint16_t, NpcSkinDef>
  + head_path_for(race): string
  + body_path_for(player_class): string
  + npc_def(sprite_id): NpcSkinDef&
}

class NpcSkinDef {
  path: string
  frame_w: int; frame_h: int
  src_x: int; src_y: int
  frames_per_dir: int
  walk_row_offset: int
  swap_lr: bool
  row_positions: vector<int>
  frame_positions: vector<int>
  speed: int
}

SpriteRenderer *--> EntitySpriteRegistry
SpriteRenderer *--> EffectOverlaySystem
EntitySpriteRegistry "1" o-- "*" RenderedEntity
EntitySpriteRegistry --> SkinConfig: consulta
SkinConfig "1" o-- "*" NpcSkinDef
@enduml